#721 - Change UiProfile handling
- don't submit full ui profile on GET /criteria-profile-data
- add GET /ui-profile to return ALL ui profiles
